--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -3,6 +3,9 @@
 $font-rr: "RobotoRegular", sans-serif;
 $font-rm: "RobotoMedium", sans-serif;
 $font-rb: "RobotoBold", sans-serif;
+$font-fsb: "FiraSansBold", sans-serif;
+$font-fseb: "FiraSansExtraBold", sans-serif;
+
 
 //media
 $xs: 0;
