--- a/assets/src/style/system/fonts.scss
+++ b/assets/src/style/system/fonts.scss
@@ -12,3 +12,13 @@
   font-family: "RobotoBold";
   src: url("./../fonts/RobotoBold.ttf");
 }
+
+@font-face {
+  font-family: "FiraSansBold";
+  src: url("./../fonts/FiraSansBold.ttf");
+}
+
+@font-face {
+  font-family: "FiraSansExtraBold";
+  src: url("./../fonts/FiraSansExtraBold.ttf");
+}
